# PanoramaPlayer

./: CMakeLists.txt  Main.qml  panoramaplay.sh  setup-web.sh
config-httpserver/: README.txt  current_video.txt  data.php  index.php  listen.php  mobile_index.php  password.txt  pc_index.php
config-httpserver/css/: style.css
shaders/: display.frag  display.vert  view.frag  view.vert
src/: ConfigReceiver.cpp  ConfigReceiver.h  Lerp.cpp  Lerp.h  PanoramaPlayer.cpp  PanoramaPlayer.h  PanoramaView.cpp  PanoramaView.h  SerialSensor.cpp  SerialSensor.h  SystemProcess.cpp  SystemProcess.h  VideoFrameExt.cpp  VideoFrameExt.h  VideoRenderer.cpp  VideoRenderer.h  main.cpp
